--- a/index.css
+++ b/index.css
@@ -1,22 +1,19 @@
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Cursed Timer ULiL';
     color: #eeeeee;
     text-align: center;
-                                                
+    background-color: #1b244a;                                            
 }
 
 .container {
     display: flex;
     justify-content: space-around;
-    text-align: center;
-    background-color: #1b244a;
 }
 
 h1 {
     border-radius: 5px;
     color: #f94f6d;
-    font-family: 'Cursed Timer ULiL';
     font-weight: 400;
     font-size: 50px;   
     text-align: center;
@@ -25,6 +22,7 @@ h1 {
 h3 {
     font-size: 30px;
     font-weight: 600;
+    font-family: sans-serif;
 }
 
 .h1-box {
@@ -40,12 +38,11 @@ button {
     border: 1px solid #9aabd8;
     border-radius: 5px;
     color: #9aabd8;
-    font-family: 'Cursed Timer ULiL';
+    font-family: inherit;
     padding: 10px;
 }
 
 .reset-btn {
-    background-color: #1b244a;
     padding: 20px;
 }
 
